sadece .lastPara ve responsive tasarım eksik gerisi tamamlandı.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,46 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Muhallebi Tarifi</h1>
+    <p class="para1">
+      Çocukluğumuzdan beri damağımızın alışık olduğu bir tatlı tarifi muhallebi.
+      Pirinç unuyla hazırlanan muhallebi tarifleri olsa da kıvamı nişastayla
+      bağlandığında bir o kadar güzel olur tadı.
+    </p>
+    <p><strong>Tarif:</strong>Enes Doğan</p>
+
+    <div class="container">
+      <div class="upperText">
+        <p><span class="upperSpan">Kaç Kişilik:</span>4 kişilik</p>
+        <p><span class="upperSpan">Hazırlama Süresi:</span>1 saat</p>
+        <p><span class="upperSpan">Pişirme Süresi:</span>2 saat</p>
+      </div>
+      <div class="text">
+        <h2>Muhallebi Tarifi İçin Malzemeler:</h2>
+        <ul>
+          <li>5 su bardağı süt</li>
+          <li>1 su bardağı toz şeker</li>
+          <li>3 yemek kaşığı buğday nişastası</li>
+          <li>1 paket vanilya</li>
+          <li>Yarım çay kaşığı un</li>
+          <li>1 tatlı kaşığı tereyağı</li>
+        </ul>
+        <h2>Muhallebi Nasıl Yapılır</h2>
+        <ol>
+          <li>5 su bardağı soğuk sütü geniş bir tencereye aktarın.</li>
+          <li>Malzemelerimizi soğuk sütün içerisine ekleyip ocağı açın.</li>
+          <li>Koyu bir kıvama gelene kadar karıştırın.</li>
+          <li>
+            Ardından ocağın altını kapatın ve bir tabağa muhabellebiyi koyun.
+          </li>
+          <li>
+            Ardından üzerini antep fıstığıyla süsleyin. Muhallebimiz servise
+            hazır.
+          </li>
+        </ol>
+      </div>
+      <p class="lastPara">Afiyet Olsun</p>
+    </div>
+  </body>
 </html>
