--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Pirinç unuyla hazırlanan muhallebi tarifleri olsa da kıvamı nişastayla
       bağlandığında bir o kadar güzel olur tadı.
     </p>
-    <p><strong>Tarif:</strong>Enes Doğan</p>
+    <p class="recipe"><strong>Tarif:</strong>Enes Doğan</p>
 
     <div class="container">
       <div class="upperText">
@@ -46,7 +46,7 @@
           </li>
         </ol>
       </div>
-      <p class="lastPara">Afiyet Olsun</p>
+      <pre class="lastPara">Afiyet Olsun</pre>
     </div>
   </body>
 </html>
