--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anasayfa | Doğan Müzik</title>
+    <title>Doğan Müzik</title>
     <link rel="stylesheet" href="css/style1.css" />
   </head>
   <body>
@@ -22,11 +22,13 @@
       <div class="content">
         <h1>Doğan Müzik</h1>
         <img src="https://picsum.photos/id/20/400" alt="" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed vel,
-          possimus quidem qui natus molestias quis quo veniam eius perferendis
-          dolor quos ex numquam?
-        </p>
+        <p>Sitemizde yer alan müzik aletleri aşağıdaki gibidir:</p>
+        <ul>
+          <li>Davul</li>
+          <li>Gitar</li>
+          <li>Bağlama</li>
+          <li>Piyano</li>
+        </ul>
       </div>
     </div>
   </body>
