--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
 
     <link rel="stylesheet" href="style.css" />
@@ -29,11 +31,26 @@
           <p class="rightOne">Gmail</p>
           <p class="rightTwo">Images</p>
           <a href="#"><i class="ri-apps-fill"></i></a>
-          <button type="button" class="btn btn-primary btn-sm">Sign in</button>
+          <button type="button" class="signIn">Sign in</button>
         </div>
       </nav>
     </header>
-    <div class="container"></div>
+    <div class="container">
+      <div class="logo">
+        <img src="img/logo.png" alt="" />
+      </div>
+
+      <div class="textInput">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" name="" id="" />
+        <img class="voice" src="img/voicelogo.png" alt="" />
+      </div>
+
+      <div class="btns">
+        <button class="btn1 btn">Google Search</button>
+        <button class="btn2 btn">I'm Feeling Lucky</button>
+      </div>
+    </div>
     <footer>
       <div class="footerLeft">
         <p>Advertising</p>
