completed expect about.html file

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
           </ul>
         </div>
       </div>
+      <a
+        href="about.html"
+        class="btn btn-primary text-center"
+        style="position: absolute; left: 47%; top: 55%"
+      >
+        Hakkımızda
+      </a>
     </div>
   </body>
 </html>
