--- a/products.html
+++ b/products.html
@@ -42,29 +42,192 @@
       </div>
     </nav>
 
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col-12">
-          <h1 class="text-center text-danger">Merhaba</h1>
-          <p>
-            Müzik Dükkanım sitemize hoşgeldiniz.Bu sitede çeşitli müzik
-            aletlerini bulabilirsiniz. Uygun fiyatlarımız ve kaliteli
-            ürünlerimiz için
-            <a href="products.html">Ürünlerimiz</a> sayfamızı ziyaret
-            edebilirsiniz.
-          </p>
+    <div class="container">
+      <div class="row mt-2">
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <hr />
-      <div class="row">
-        <div class="col-12 text-center">
-          <p class="text-warning">Sitemizde Bulunan Müzik Aletleri</p>
-          <ul class="list-inline-item">
-            <li>Gitar</li>
-            <li>Davul</li>
-            <li>Piyano</li>
-            <li>Keman</li>
-          </ul>
+      <div class="row mt-2">
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mt-2">
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar1.jpg"
+              class="card-img-top img-fluid"
+              style="height: 350px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
