about.html completed

--- a/bootstrap-hw-1/index.html
+++ b/bootstrap-hw-1/index.html
@@ -15,8 +15,10 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-      <a class="navbar-brand text-danger" href="index.html">Müzik Dükkanım</a>
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <a class="navbar-brand text-danger offset-1" href="index.html"
+        >Müzik Dükkanım</a
+      >
       <button
         class="navbar-toggler"
         type="button"
@@ -29,15 +31,17 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav offset-9">
           <li class="nav-item active">
-            <a class="nav-link text-light" href="index.html">Anasayfa</a>
+            <a class="nav-link text-light offset-1" href="index.html"
+              >Anasayfa</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link text-light" href="products.html">Ürünlerimiz</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-light" href="about.html">Hakkında</a>
+            <a class="nav-link text-light" href="about.html">Hakkımızda</a>
           </li>
         </ul>
       </div>
