--- a/bootstrap-hw-1/products.html
+++ b/bootstrap-hw-1/products.html
@@ -14,8 +14,10 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-primary">
-      <a class="navbar-brand text-danger" href="index.html">Müzik Dükkanım</a>
+    <nav class="navbar navbar-expand-lg bg-dark">
+      <a class="navbar-brand text-danger offset-1" href="index.html"
+        >Müzik Dükkanım</a
+      >
       <button
         class="navbar-toggler"
         type="button"
@@ -28,23 +30,19 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link text-light" href="index.html">Anasayfa</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="products.html">Ürünlerimiz</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="about.html">Hakkında</a>
-          </li>
-        </ul>
+        <div class="navbar-nav offset-9">
+          <a class="nav-link text-light offset-1" href="index.html">Anasayfa</a>
+
+          <a class="nav-link text-light" href="products.html">Ürünlerimiz</a>
+
+          <a class="nav-link text-light" href="about.html">Hakkında</a>
+        </div>
       </div>
     </nav>
 
     <div class="container">
-      <div class="row mt-2">
-        <div class="col-sm-4">
+      <div class="row mt-5">
+        <div class="col-6 col-md-4">
           <div
             class="card"
             style="width: 300px; height: 350px; margin-right: 10px"
@@ -64,112 +62,88 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-6 col-md-4">
           <div
             class="card"
             style="width: 300px; height: 350px; margin-right: 10px"
           >
             <img
-              src="img/guitar1.jpg"
+              src="img/guitar2.jpg"
               class="card-img-top img-fluid"
               style="height: 250px"
               alt=""
             />
             <div class="card-block" style="padding: 10px">
               <div class="card-title">
-                <strong>Elektro Gitar</strong>
+                <strong>Akustik Gitar</strong>
                 <p class="card-text"></p>
                 <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-6 col-md-4">
           <div
             class="card"
             style="width: 300px; height: 350px; margin-right: 10px"
           >
             <img
-              src="img/guitar1.jpg"
+              src="img/guitar3.png"
               class="card-img-top img-fluid"
               style="height: 250px"
               alt=""
             />
             <div class="card-block" style="padding: 10px">
               <div class="card-title">
-                <strong>Elektro Gitar</strong>
+                <strong>Akustik Gitar</strong>
                 <p class="card-text"></p>
                 <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="row mt-2">
-        <div class="col-sm-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar1.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Elektro Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar1.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Elektro Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar1.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Elektro Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="row mt-2">
-        <div class="col-sm-4">
+        <div class="col-6 col-md-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar4.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Elektro Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar5.jpg"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Akustik Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-4">
           <div
             class="card"
             style="width: 300px; height: 350px; margin-right: 10px"
@@ -189,33 +163,54 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+
+        <div class="col-6 col-md-4">
           <div
             class="card"
             style="width: 300px; height: 350px; margin-right: 10px"
           >
             <img
-              src="img/guitar1.jpg"
+              src="img/guitar2.jpg"
               class="card-img-top img-fluid"
               style="height: 250px"
               alt=""
             />
             <div class="card-block" style="padding: 10px">
               <div class="card-title">
-                <strong>Elektro Gitar</strong>
+                <strong>Akustik Gitar</strong>
                 <p class="card-text"></p>
                 <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
+        <div class="col-6 col-md-4">
           <div
             class="card"
             style="width: 300px; height: 350px; margin-right: 10px"
           >
             <img
-              src="img/guitar1.jpg"
+              src="img/guitar3.png"
+              class="card-img-top img-fluid"
+              style="height: 250px"
+              alt=""
+            />
+            <div class="card-block" style="padding: 10px">
+              <div class="card-title">
+                <strong>Akustik Gitar</strong>
+                <p class="card-text"></p>
+                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-4">
+          <div
+            class="card"
+            style="width: 300px; height: 350px; margin-right: 10px"
+          >
+            <img
+              src="img/guitar4.jpg"
               class="card-img-top img-fluid"
               style="height: 350px"
               alt=""
