--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="https://picsum.photos/id/237/1600/600" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
-                <img src="https://picsum.photos/id/88/1600/600" class="d-block w-100" alt="..." />
+                <img src="https://picsum.photos/id/48/1600/600" class="d-block w-100" alt="..." />
             </div>
             <div class="carousel-item">
                 <img src="https://picsum.photos/id/260/1600/600" class="d-block w-100" alt="..." />
@@ -66,8 +66,7 @@
         <div class="row mt-5">
             <div class="col-sm-6">
                 <!-- about us - start -->
-
-                <img class="w-100 img-thumbnail" src="https://picsum.photos/id/37/600/400" alt="" />
+                <img class="w-100 img-thumbnail" src="https://picsum.photos/id/37/600/400" alt="About Us Picture" />
             </div>
             <div class="col-sm-6">
                 <h2>Hakkımızda</h2>
@@ -87,11 +86,10 @@
             </div>
 
             <!-- products - start -->
-
-            <div class="row mt-3">
+            <div class="row mt-3 ml-1">
                 <div class="col-sm-4">
                     <div class="card">
-                        <img src="https://picsum.photos/id/78/400/300" class="card-img-top" alt="..." />
+                        <img src="https://picsum.photos/id/78/400/300" class="card-img-top" alt="Product Photo 1"/>
                         <div class="card-body">
                             <h5 class="card-title">Ürün 1</h5>
                             <p class="card-text">
@@ -104,7 +102,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="card">
-                        <img src="https://picsum.photos/id/68/400/300" class="card-img-top" alt="..." />
+                        <img src="https://picsum.photos/id/68/400/300" class="card-img-top" alt="Product Photo 2"/>
                         <div class="card-body">
                             <h5 class="card-title">Ürün 1</h5>
                             <p class="card-text">
@@ -117,7 +115,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="card">
-                        <img src="https://picsum.photos/id/8/400/300" class="card-img-top" alt="..." />
+                        <img src="https://picsum.photos/id/8/400/300" class="card-img-top" alt="Product Photo 3"/>
                         <div class="card-body">
                             <h5 class="card-title">Ürün 1</h5>
                             <p class="card-text">
@@ -132,7 +130,6 @@
             <!-- products - end -->
 
             <!-- pictures start -->
-
             <div class="row mt-5">
                 <div class="col-sm-12">
                     <h4>Resimler</h4>
@@ -210,9 +207,8 @@
                 </ul>
             </div>
         </div>
-    </footer></div>
-
-    <!-- footer end -->
+    </footer>
+</div>
+  <!-- footer end -->
 </body>
-
 </html>
