--- a/bootstrap-demo/index.html
+++ b/bootstrap-demo/index.html
@@ -22,9 +22,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto">
                 <a class="nav-link active" href="#">Anasayfa <span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="#">Hakkımızda</a>
+                <a class="nav-link" href="#">Eğitimler</a>
+                <a class="nav-link disabled">İletişim</a>
             </div>
         </div>
     </nav>
