--- a/bootstrap-demo/index.html
+++ b/bootstrap-demo/index.html
@@ -24,7 +24,7 @@
                 <a class="nav-link active" href="#">Anasayfa <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="#">Hakkımızda</a>
                 <a class="nav-link" href="#">Eğitimler</a>
-                <a class="nav-link disabled">İletişim</a>
+                <a class="nav-link">İletişim</a>
             </div>
         </div>
     </nav>
