added readme file

--- a/bootstrap-hw-1/products.html
+++ b/bootstrap-hw-1/products.html
@@ -41,190 +41,196 @@
     </nav>
 
     <div class="container">
-      <div class="row mt-5">
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar1.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Elektro Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+        <div class="row mt-2">
+          <div class="col-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar1.jpg"
+                class="card-img-top img-fluid"
+                style="height: 250px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Elektro Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar2.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Akustik Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+          <div class="col-sm-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar2.jpg"
+                class="card-img-top img-fluid"
+                style="height: 250px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Akustik Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar3.png"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Akustik Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar4.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Elektro Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar5.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Akustik Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar1.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Elektro Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+          <div class="col-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar3.png"
+                class="card-img-top img-fluid"
+                style="height: 250px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Akustik Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar2.jpg"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Akustik Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+        <div class="row mt-5">
+          <div class="col-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar4.jpg"
+                class="card-img-top img-fluid"
+                style="height: 250px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Elektro Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar5.jpg"
+                class="card-img-top img-fluid"
+                style="height: 250px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Akustik Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar1.jpg"
+                class="card-img-top img-fluid"
+                style="height: 250px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Elektro Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar3.png"
-              class="card-img-top img-fluid"
-              style="height: 250px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Akustik Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+          <div class="row mt-5">
+            <div class="col-6 col-md-4">
+              <div
+                class="card"
+                style="width: 300px; height: 350px; margin-right: 10px"
+              >
+                <img
+                  src="img/guitar2.jpg"
+                  class="card-img-top img-fluid"
+                  style="height: 250px"
+                  alt=""
+                />
+                <div class="card-block" style="padding: 10px">
+                  <div class="card-title">
+                    <strong>Akustik Gitar</strong>
+                    <p class="card-text"></p>
+                    <a href="#" class="btn btn-primary btn-dark btn-sm"
+                      >6500₺</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          <div class="col-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar3.png"
+                class="card-img-top img-fluid"
+                style="height: 250px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Akustik Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-4">
+            <div
+              class="card"
+              style="width: 300px; height: 350px; margin-right: 10px"
+            >
+              <img
+                src="img/guitar4.jpg"
+                class="card-img-top img-fluid"
+                style="height: 350px"
+                alt=""
+              />
+              <div class="card-block" style="padding: 10px">
+                <div class="card-title">
+                  <strong>Elektro Gitar</strong>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-6 col-md-4">
-          <div
-            class="card"
-            style="width: 300px; height: 350px; margin-right: 10px"
-          >
-            <img
-              src="img/guitar4.jpg"
-              class="card-img-top img-fluid"
-              style="height: 350px"
-              alt=""
-            />
-            <div class="card-block" style="padding: 10px">
-              <div class="card-title">
-                <strong>Elektro Gitar</strong>
-                <p class="card-text"></p>
-                <a href="#" class="btn btn-primary btn-dark btn-sm">6500₺</a>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
-    </div>
   </body>
 </html>
