--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </nav>
       </div>
     </div>
-    <div class="bg-yellow py-5 border-bottom-dark mx-auto">
+    <div class="bg-yellow py-3 border-bottom-dark">
       <div class="container">
         <div class="row">
           <div class="col-6">
