--- a/bootstrap-medium-clone/index.html
+++ b/bootstrap-medium-clone/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- navbar start -->
     <div class="bg-yellow border-bottom-dark py-1">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -88,6 +89,159 @@
         </div>
       </div>
     </div>
+    <!-- navbar end -->
+    <!-- article start -->
+    <div class="container mt-5 mb-3">
+      <div class="row">
+        <div class="col-12">
+          <h6>
+            <i class="fa-solid fa-arrow-trend-up"></i
+            ><small class="mx-3">TRENDING ON MEDIUM</small>
+          </h6>
+        </div>
+        <article class="col-sm-4 mt-2">
+          <div class="row">
+            <div class="col-1 text-black-50"><h6>01</h6></div>
+            <div class="col-11">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4 mt-2">
+          <div class="row">
+            <div class="col-1 text-black-50"><h6>02</h6></div>
+            <div class="col-11">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/37/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Barack Obama</span>
+              <h5 class="small mt-2">
+                <strong>My 2022 Summer Lists</strong>
+              </h5>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jul 26</li>
+                <li class="list-inline-item">3 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4 mt-2">
+          <div class="row">
+            <div class="col-1 text-black-50"><h6>03</h6></div>
+            <div class="col-11">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/46/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Nadin Brzezinski</span>
+              <h5 class="small mt-2">
+                <strong>Logistics Collapse</strong>
+              </h5>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jul 17</li>
+                <li class="list-inline-item">12 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4 mt-2">
+          <div class="row">
+            <div class="col-1 text-black-50"><h6>04</h6></div>
+            <div class="col-11">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/57/25/25"
+                alt=""
+              />
+              <span class="small mx-1"> Aniket in Geek Culture</span>
+              <h5 class="small mt-2">
+                <strong
+                  >Google’s New Programming Language is Called Carbon</strong
+                >
+              </h5>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jul 23</li>
+                <li class="list-inline-item">3 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4 mt-2">
+          <div class="row">
+            <div class="col-1 text-black-50"><h6>05</h6></div>
+            <div class="col-11">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/77/25/25"
+                alt=""
+              />
+              <span class="small mx-1"> Tom Cooper</span>
+              <h5 class="small mt-2">
+                <strong>Ukraine War: Q & A, 24 July 2022</strong>
+              </h5>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jul 24</li>
+                <li class="list-inline-item">13 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article>
+        <article class="col-sm-4 mt-2">
+          <div class="row">
+            <div class="col-1 text-black-50"><h6>06</h6></div>
+            <div class="col-11">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/117/25/25"
+                alt=""
+              />
+              <span class="small mx-1">umair haque in Eudaimonia and Co</span>
+              <h5 class="small mt-2">
+                <strong>We’re Not Going to Make it to 2050 </strong>
+              </h5>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Jul 17</li>
+                <li class="list-inline-item">9 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+    <!-- article end -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
