--- a/bootstrap-medium-clone/index.html
+++ b/bootstrap-medium-clone/index.html
@@ -99,7 +99,7 @@
             ><small class="mx-3">TRENDING ON MEDIUM</small>
           </h6>
         </div>
-        <article class="col-sm-4 mt-2">
+        <article class="col-sm-4 mt-2 mb-2">
           <div class="row">
             <div class="col-1 text-black-50"><h6>01</h6></div>
             <div class="col-11">
@@ -122,7 +122,7 @@
             </div>
           </div>
         </article>
-        <article class="col-sm-4 mt-2">
+        <article class="col-sm-4 mt-2 mb-2">
           <div class="row">
             <div class="col-1 text-black-50"><h6>02</h6></div>
             <div class="col-11">
@@ -145,7 +145,7 @@
             </div>
           </div>
         </article>
-        <article class="col-sm-4 mt-2">
+        <article class="col-sm-4 mt-2 mb-2">
           <div class="row">
             <div class="col-1 text-black-50"><h6>03</h6></div>
             <div class="col-11">
@@ -168,7 +168,7 @@
             </div>
           </div>
         </article>
-        <article class="col-sm-4 mt-2">
+        <article class="col-sm-4 mt-2 mb-2">
           <div class="row">
             <div class="col-1 text-black-50"><h6>04</h6></div>
             <div class="col-11">
@@ -177,7 +177,10 @@
                 src="https://picsum.photos/id/57/25/25"
                 alt=""
               />
-              <span class="small mx-1"> Aniket in Geek Culture</span>
+              <span class="small mx-1">
+                Aniket <small class="fs-6 text-muted">in</small> Geek
+                Culture</span
+              >
               <h5 class="small mt-2">
                 <strong
                   >Google’s New Programming Language is Called Carbon</strong
@@ -193,7 +196,7 @@
             </div>
           </div>
         </article>
-        <article class="col-sm-4 mt-2">
+        <article class="col-sm-4 mt-2 mb-2">
           <div class="row">
             <div class="col-1 text-black-50"><h6>05</h6></div>
             <div class="col-11">
@@ -216,7 +219,7 @@
             </div>
           </div>
         </article>
-        <article class="col-sm-4 mt-2">
+        <article class="col-sm-4 mt-2 mb-2">
           <div class="row">
             <div class="col-1 text-black-50"><h6>06</h6></div>
             <div class="col-11">
@@ -225,7 +228,11 @@
                 src="https://picsum.photos/id/117/25/25"
                 alt=""
               />
-              <span class="small mx-1">umair haque in Eudaimonia and Co</span>
+              <span class="small mx-1"
+                >umair haque
+                <small class="fs-6 text-muted">in</small> Eudaimonia and
+                Co</span
+              >
               <h5 class="small mt-2">
                 <strong>We’re Not Going to Make it to 2050 </strong>
               </h5>
@@ -240,8 +247,284 @@
           </div>
         </article>
       </div>
+
+      <!-- content start -->
+      <div class="row mt-5">
+        <div class="col-sm-8">
+          <div class="row mt-2 mb-5">
+            <!-- contentbox start -->
+            <div class="col-8">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <p class="h6">
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ducimus, eum.
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+            <div class="col-4">
+              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+            </div>
+            <!-- content box end -->
+          </div>
+          <div class="row mt-5 mb-5">
+            <!-- contentbox start -->
+            <div class="col-8">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <p class="h6">
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ducimus, eum.
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+            </div>
+            <!-- content box end -->
+          </div>
+          <div class="row mt-5 mb-5">
+            <!-- contentbox start -->
+            <div class="col-8">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <p class="h6">
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ducimus, eum.
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+            </div>
+            <!-- content box end -->
+          </div>
+          <div class="row mt-5 mb-5">
+            <!-- contentbox start -->
+            <div class="col-8">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <p class="h6">
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ducimus, eum.
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+            </div>
+            <!-- content box end -->
+          </div>
+          <div class="row mt-5 mb-5">
+            <!-- contentbox start -->
+            <div class="col-8">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <p class="h6">
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ducimus, eum.
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+            </div>
+            <!-- content box end -->
+          </div>
+          <div class="row mt-5 mb-5">
+            <!-- contentbox start -->
+            <div class="col-8">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <p class="h6">
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ducimus, eum.
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+            </div>
+            <!-- content box end -->
+          </div>
+          <div class="row mt-5 mb-5">
+            <!-- contentbox start -->
+            <div class="col-8">
+              <img
+                class="rounded-circle"
+                src="https://picsum.photos/id/23/25/25"
+                alt=""
+              />
+              <span class="small mx-1">Alex Benjamin</span>
+              <h5 class="small mt-2">
+                <strong>Lorem ipsum dolor sit amet.</strong>
+              </h5>
+              <p class="h6">
+                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Ducimus, eum.
+              </p>
+              <ul class="list-inline small">
+                <li class="list-inline-item">Dec 1</li>
+                <li class="list-inline-item">6 min read</li>
+                <li class="list-inline-item">
+                  <i class="fa fa-star"></i>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-4">
+              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+            </div>
+            <!-- content box end -->
+          </div>
+        </div>
+        <div class="col-sm-4 padding-l">
+          <h6 class="fw-bold mb-3">
+            <small>DISCOVER MORE OF WHAT MATTERS TO YOU</small>
+          </h6>
+
+          <ul class="list-inline">
+            <div class="col">
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Self</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Relationship</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Data Science</a
+                >
+              </li>
+            </div>
+            <div class="col">
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Programming</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Productivity</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Javascript</a
+                >
+              </li>
+            </div>
+            <div class="col">
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Machine Learning</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Politics</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="btn btn-sm btn-outline-secondary text-muted"
+                  >Health</a
+                >
+              </li>
+            </div>
+          </ul>
+        </div>
+      </div>
+      <!-- content end -->
     </div>
-    <!-- article end -->
+    <!--container end-->
+
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
