--- a/bootstrap-medium-clone/index.html
+++ b/bootstrap-medium-clone/index.html
@@ -519,6 +519,60 @@
               </li>
             </div>
           </ul>
+          <hr class="text-muted mt-3" />
+          <!-- **************************************************************** -->
+          <ul class="list-inline">
+            <div class="col">
+              <li class="list-inline-item">
+                <a href="" class="text-decoration-none small text-muted"
+                  >Help</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >Status</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >Writers</a
+                >
+              </li>
+
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >Blog</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >Careers</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >Privacy</a
+                >
+              </li>
+            </div>
+            <div class="col">
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >Terms</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >About</a
+                >
+              </li>
+              <li class="list-inline-item">
+                <a href="" class="text-muted text-decoration-none small"
+                  >Knowable</a
+                >
+              </li>
+            </div>
+          </ul>
         </div>
       </div>
       <!-- content end -->
