people name and dates completed

--- a/bootstrap-medium-clone/index.html
+++ b/bootstrap-medium-clone/index.html
@@ -256,16 +256,19 @@
             <div class="col-8">
               <img
                 class="rounded-circle"
-                src="https://picsum.photos/id/23/25/25"
+                src="https://picsum.photos/id/33/25/25"
                 alt=""
               />
-              <span class="small mx-1">Alex Benjamin</span>
+              <span class="small mx-1">Jamie Cohen</span>
               <h5 class="small mt-2">
-                <strong>Lorem ipsum dolor sit amet.</strong>
+                <strong
+                  >TV Creators Shouldn’t Draw Inspiration from George Lucas’
+                  Most Meddlesome Behavior</strong
+                >
               </h5>
               <p class="h6">
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ducimus, eum.
+                The Duffer Brothers edited Stranger Things episodes after they
+                were released. Is Will’s birthday is the new ‘Han Shot First’?
               </p>
               <ul class="list-inline small">
                 <li class="list-inline-item">Dec 1</li>
@@ -276,7 +279,11 @@
               </ul>
             </div>
             <div class="col-4">
-              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+              <img
+                src="https://picsum.photos/id/137/400/250"
+                alt=""
+                class="w-100"
+              />
             </div>
             <!-- content box end -->
           </div>
@@ -288,14 +295,11 @@
                 src="https://picsum.photos/id/23/25/25"
                 alt=""
               />
-              <span class="small mx-1">Alex Benjamin</span>
+              <span class="small mx-1">Savala Nolan</span>
               <h5 class="small mt-2">
-                <strong>Lorem ipsum dolor sit amet.</strong>
+                <strong>We Are Still Good</strong>
               </h5>
-              <p class="h6">
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ducimus, eum.
-              </p>
+              <p class="h6">on hope</p>
               <ul class="list-inline small">
                 <li class="list-inline-item">Dec 1</li>
                 <li class="list-inline-item">6 min read</li>
@@ -306,7 +310,11 @@
             </div>
 
             <div class="col-4">
-              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+              <img
+                src="https://picsum.photos/id/237/400/250"
+                alt=""
+                class="w-100"
+              />
             </div>
             <!-- content box end -->
           </div>
@@ -318,13 +326,14 @@
                 src="https://picsum.photos/id/23/25/25"
                 alt=""
               />
-              <span class="small mx-1">Alex Benjamin</span>
+              <span class="small mx-1">Cai Emmons</span>
               <h5 class="small mt-2">
-                <strong>Lorem ipsum dolor sit amet.</strong>
+                <strong>Insignificance</strong>
               </h5>
               <p class="h6">
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ducimus, eum.
+                The recent photographs taken from space with the James Webb
+                telescope — of galaxies and individual stars light years away
+                from...
               </p>
               <ul class="list-inline small">
                 <li class="list-inline-item">Dec 1</li>
@@ -336,7 +345,11 @@
             </div>
 
             <div class="col-4">
-              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+              <img
+                src="https://picsum.photos/id/117/400/250"
+                alt=""
+                class="w-100"
+              />
             </div>
             <!-- content box end -->
           </div>
@@ -348,13 +361,15 @@
                 src="https://picsum.photos/id/23/25/25"
                 alt=""
               />
-              <span class="small mx-1">Alex Benjamin</span>
+              <span class="small mx-1"
+                >George Dillard <small class="text-muted">in</small> Politically
+                Speaking</span
+              >
               <h5 class="small mt-2">
-                <strong>Lorem ipsum dolor sit amet.</strong>
+                <strong>Is It 1946 All Over Again?</strong>
               </h5>
               <p class="h6">
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ducimus, eum.
+                A tale of inflation, labor struggles, and an unpopular president
               </p>
               <ul class="list-inline small">
                 <li class="list-inline-item">Dec 1</li>
@@ -366,7 +381,11 @@
             </div>
 
             <div class="col-4">
-              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+              <img
+                src="https://picsum.photos/id/157/400/250"
+                alt=""
+                class="w-100"
+              />
             </div>
             <!-- content box end -->
           </div>
@@ -378,13 +397,17 @@
                 src="https://picsum.photos/id/23/25/25"
                 alt=""
               />
-              <span class="small mx-1">Alex Benjamin</span>
+              <span class="small mx-1">Patrick Loftus</span>
               <h5 class="small mt-2">
-                <strong>Lorem ipsum dolor sit amet.</strong>
+                <strong
+                  >Saving 1.5C Requires the U.S. to Quickly and Fundamentally
+                  Rethink Work, Debt, and Fiscal...</strong
+                >
               </h5>
               <p class="h6">
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ducimus, eum.
+                Manchin’s climate pivot is a win, but the UN says the U.S. needs
+                to reduce emissions in 2022 to keep 1.5 alive. Here are 4 ways
+                to do...
               </p>
               <ul class="list-inline small">
                 <li class="list-inline-item">Dec 1</li>
@@ -396,7 +419,11 @@
             </div>
 
             <div class="col-4">
-              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+              <img
+                src="https://picsum.photos/id/136/400/250"
+                alt=""
+                class="w-100"
+              />
             </div>
             <!-- content box end -->
           </div>
@@ -408,14 +435,14 @@
                 src="https://picsum.photos/id/23/25/25"
                 alt=""
               />
-              <span class="small mx-1">Alex Benjamin</span>
+              <span class="small mx-1">
+                Miyah Byrd <small class="text-muted">in</small> Rainbow
+                Salad</span
+              >
               <h5 class="small mt-2">
-                <strong>Lorem ipsum dolor sit amet.</strong>
+                <strong>You Once Said You Loved</strong>
               </h5>
-              <p class="h6">
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ducimus, eum.
-              </p>
+              <p class="h6">You once said you loved soulful singers</p>
               <ul class="list-inline small">
                 <li class="list-inline-item">Dec 1</li>
                 <li class="list-inline-item">6 min read</li>
@@ -426,7 +453,11 @@
             </div>
 
             <div class="col-4">
-              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+              <img
+                src="https://picsum.photos/id/17/400/250"
+                alt=""
+                class="w-100"
+              />
             </div>
             <!-- content box end -->
           </div>
@@ -438,13 +469,16 @@
                 src="https://picsum.photos/id/23/25/25"
                 alt=""
               />
-              <span class="small mx-1">Alex Benjamin</span>
+              <span class="small mx-1">Micah Sifry</span>
               <h5 class="small mt-2">
-                <strong>Lorem ipsum dolor sit amet.</strong>
+                <strong
+                  >Andrew Yang’s New Forward Party is Unlikely to Go
+                  Anywhere</strong
+                >
               </h5>
               <p class="h6">
-                Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Ducimus, eum.
+                Third parties in America sound good until you try to stand one
+                up
               </p>
               <ul class="list-inline small">
                 <li class="list-inline-item">Dec 1</li>
@@ -456,7 +490,11 @@
             </div>
 
             <div class="col-4">
-              <img src="https://picsum.photos/400/250" alt="" class="w-100" />
+              <img
+                src="https://picsum.photos/id/147/400/250"
+                alt=""
+                class="w-100"
+              />
             </div>
             <!-- content box end -->
           </div>
@@ -520,6 +558,7 @@
             </div>
           </ul>
           <hr class="text-muted mt-3" />
+
           <!-- **************************************************************** -->
           <ul class="list-inline">
             <div class="col">
