modified hr tag

--- a/bootstrap-medium-clone/index.html
+++ b/bootstrap-medium-clone/index.html
@@ -43,8 +43,8 @@
             >
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav offset-7">
+            <div class="collapse navbar-collapse" id="navbarNav ">
+              <ul class="navbar-nav offset-8">
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="#">Our Story</a>
                 </li>
@@ -74,7 +74,7 @@
               Discover stories, thinking, and expertise from writers on any
               topic.
             </p>
-            <a href="#" class="btn btn-dark btn-outline-dark text-light"
+            <a href="#" class="btn btn-dark rounded btn-outline-dark text-light"
               >Start Reading</a
             >
           </div>
@@ -83,7 +83,7 @@
             <img
               src="https://picsum.photos/300/300"
               alt=""
-              class="rounded-circle float-end"
+              class="rounded-circle float-right"
             />
           </div>
         </div>
@@ -91,7 +91,7 @@
     </div>
     <!-- navbar end -->
     <!-- article start -->
-    <div class="container mt-5 mb-3">
+    <div class="container mt-5 mb-3 offset-1">
       <div class="row">
         <div class="col-12">
           <h6>
@@ -99,6 +99,7 @@
             ><small class="mx-3">TRENDING ON MEDIUM</small>
           </h6>
         </div>
+        <div></div>
         <article class="col-sm-4 mt-2 mb-2">
           <div class="row">
             <div class="col-1 text-black-50"><h6>01</h6></div>
@@ -247,6 +248,8 @@
           </div>
         </article>
       </div>
+
+      <hr class="text-muted mb-3 mt-3" />
 
       <!-- content start -->
       <div class="row mt-5">
