modified html and css files

--- a/bootstrap-medium-clone/index.html
+++ b/bootstrap-medium-clone/index.html
@@ -65,7 +65,7 @@
         </nav>
       </div>
     </div>
-    <div class="bg-yellow py-3 border-bottom-dark">
+    <div class="bg-yellow py-4 border-bottom-dark">
       <div class="container">
         <div class="row">
           <div class="col-6">
@@ -509,51 +509,51 @@
 
           <ul class="list-inline">
             <div class="col">
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Self</a
                 >
               </li>
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Relationship</a
                 >
               </li>
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Data Science</a
                 >
               </li>
             </div>
             <div class="col">
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Programming</a
                 >
               </li>
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Productivity</a
                 >
               </li>
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Javascript</a
                 >
               </li>
             </div>
             <div class="col">
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Machine Learning</a
                 >
               </li>
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Politics</a
                 >
               </li>
-              <li class="list-inline-item">
+              <li class="list-inline-item padding">
                 <a href="" class="btn btn-sm btn-outline-secondary text-muted"
                   >Health</a
                 >
