added image hover effect

--- a/bootstrap-medium-clone/index.html
+++ b/bootstrap-medium-clone/index.html
@@ -83,7 +83,7 @@
             <img
               src="https://picsum.photos/300/300"
               alt=""
-              class="rounded-circle float-right"
+              class="rounded-circle float-right img-hover"
             />
           </div>
         </div>
