js dates and get day name are completed

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <div class="text">
-      <div class="logo">KODLUYORUZ</div>
+      <div class="title">KODLUYORUZ</div>
       <div class="textOne">
         Merhaba, <span class="name"></span>! Hoş geldin!
       </div>
-      <div>
-        <span class="time"></span> tarihinde Kodluyoruz Frontend Web Development
-        Patikası'nın Javascript bölümü 1.ödevindesiniz.
+      <div class="textTwo">
+        <span class="time"></span> <br />
+        tarihinde Kodluyoruz Frontend Web Development Patikası'nın Javascript
+        bölümü 1.ödevindesiniz.
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
